# video-search-and-summarization-devx

./: .gitignore  README.md  WELCOME.ipynb  apt.txt  compose.yaml  preBuild.bash  pyproject.toml  requirements.txt  variables.env
.devx/: README.md  _sidebar.md  compose.yaml  index.html  jp_app_launcher.yaml  secrets.md
.devx/_static/css/: custom.css
.devx/_static/js/: docsify-persistent-scroll.js  docsify-progressive-unfold.js  jupyter-link.js  launch_workshop.js  mustache-config.js
.devx/lab_app/: README.md
.devx/lab_custom/: README.md
.devx/lab_intro/: README.md
.devx/lab_setup/: README.md
.project/: brev.Containerfile  brev.compose.yaml  edit.cache  spec.yaml
code/: Custom_VSS.ipynb  Intro_To_VSS.ipynb  bridge_inspector.py  helpers.py  secrets_management.ipynb  wizards.py
code/answers/: bridge_inspector.py
